Add problems when migrating